[tool.poetry]
name = "ola"
version = "0.1.0"
description = ""
authors = ["Aviad Hadad <aviad@sthuck.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
igraph = "^0.11.2"
pandas = "^2.1.1"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
